First commit for MultiNeuronModule

--- a/noisy_mutual_inhibition.ipynb
+++ b/noisy_mutual_inhibition.ipynb
@@ -2863,9 +2863,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [py36]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [py36]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2877,7 +2877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   },
   "nbpresent": {
    "slides": {},
